objects/ssot__CollectionPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CollectedAmount__c</fullName>
        <label>Collected Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionPlanReasonId__c</fullName>
        <label>Collection Plan Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionPlanSegment__c</fullName>
        <label>Collection Plan Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionPlanStatus__c</fullName>
        <label>Collection Plan Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentDueAmount__c</fullName>
        <label>Current Due Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysPastDueNumber__c</fullName>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FirstCallDateTime__c</fullName>
        <label>First Call Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstEmailDateTime__c</fullName>
        <label>First Email Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstSMSDateTime__c</fullName>
        <label>First SMS Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Collection Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialDueAmount__c</fullName>
        <label>Initial Due Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromiseToPayCount__c</fullName>
        <label>Promise To Pay Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceContextId__c</fullName>
        <label>Reference Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceContextObject__c</fullName>
        <label>Reference Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RiskScore__c</fullName>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFeesAmount__c</fullName>
        <label>Total Fees Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalInterestAmount__c</fullName>
        <label>Total Interest Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825129992_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CollectionPlan_AccountId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CollectionPlan_AccountId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1726825129992_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825145984_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CollectionPlan_CollectionPlanReasonI_rel</label>
        <referenceTo>ssot__CollectionPlanReason__dlm</referenceTo>
        <relationshipLabel>CollectionPlan_CollectionPlanReasonI_rel</relationshipLabel>
        <relationshipName>rel_1726825145984_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>